namespace eShopX.Domain.Aggregates.Payments;

public enum PaymentMethod
{
    LinePay,
    PayPal
}
