namespace eShopX.Domain.Aggregates.Payments;

public enum PaymentStatus
{
    Pending,
    Paid,
    Failed
}
